--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
-vagrant (0.9.3-2) UNRELEASED; urgency=low
+vagrant (0.9.5-1) UNRELEASED; urgency=low
 
+  * New upstream release
   * debian/control:
     - Drop DM-Upload-Allowed
 
- -- Laurent Bigonville <bigon@debian.org>  Tue, 31 Jan 2012 23:25:03 +0100
+ -- Laurent Bigonville <bigon@debian.org>  Mon, 06 Feb 2012 10:40:44 +0100
 
 vagrant (0.9.3-1) unstable; urgency=low
 
