--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-vagrant (0.9.5-1) UNRELEASED; urgency=low
+vagrant (0.9.5-1) unstable; urgency=low
 
   * New upstream release
   * debian/control:
     - Drop DM-Upload-Allowed
 
- -- Laurent Bigonville <bigon@debian.org>  Mon, 06 Feb 2012 10:40:44 +0100
+ -- Laurent Bigonville <bigon@debian.org>  Mon, 06 Feb 2012 11:24:58 +0100
 
 vagrant (0.9.3-1) unstable; urgency=low
 
