--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vagrant (0.9.5-2) UNRELEASED; urgency=low
+
+  * Add debian/gbp.conf file
+
+ -- Laurent Bigonville <bigon@debian.org>  Mon, 06 Feb 2012 13:41:08 +0100
+
 vagrant (0.9.5-1) unstable; urgency=low
 
   * New upstream release
