--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 vagrant (1.0.0-1) UNRELEASED; urgency=low
 
   * New upstream release
+  * debian/require-rubygems.overrides: Add lib/vagrant/command/gem.rb
 
- -- Laurent Bigonville <bigon@debian.org>  Wed, 07 Mar 2012 13:00:59 +0100
+ -- Laurent Bigonville <bigon@debian.org>  Wed, 07 Mar 2012 13:08:54 +0100
 
 vagrant (0.9.7-1) unstable; urgency=low
 
