--- a/templates/locales/en.yml
+++ b/templates/locales/en.yml
@@ -36,6 +36,10 @@ en:
 
         %{message}
         Note that this error message will not appear in the next version of Vagrant.
+      destroy_requires_force: |-
+        Destroy doesn't have a TTY to ask for confirmation. Please pass the
+        `--force` flag to force a destroy, otherwise attach a TTY so that
+        the destroy can be confirmed.
       dotfile_is_directory: |-
         The local file Vagrant uses to store data ".vagrant" already exists
         and is a directory! If you are in your home directory, then please run
@@ -141,6 +145,11 @@ en:
         Port: %{port}
         Username: %{username}
         Private key: %{key_path}
+      ui_expects_tty: |-
+        Vagrant is attempting to interface with the UI in a way that requires
+        a TTY. Most actions in Vagrant that require a TTY have configuration
+        switches to disable this requirement. Please do that or run Vagrant
+        with TTY.
       vagrantfile_exists: |-
         `Vagrantfile` already exists in this directory. Remove it before
         running `vagrant init`.
@@ -274,6 +283,11 @@ en:
         not_created: |-
           The environment has not yet been created. Run `vagrant up` to
           create the environment.
+        paused: |-
+          The VM is paused. This VM may have been paused via the VirtualBox
+          GUI or the VBoxManage command line interface. To unpause, please
+          use the VirtualBox GUI and/or VBoxManage command line interface so
+          that vagrant would be able to control the VM again.
         poweroff: |-
           The VM is powered off. To restart the VM, simply run `vagrant up`
         running: |-
