--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,13 @@
 vagrant (1.0.1-1) UNRELEASED; urgency=low
 
   * New upstream release
-  * debian/require-rubygems.overrides: Add lib/vagrant/command/gem.rb
+  * debian/require-rubygems.overrides: Add lib/vagrant/command/gem.rb,
+    lib/vagrant/environment.rb
   * debian/control:
     - Bump Standards-Version to 3.9.3 (no further changes)
     - Add version to rubygems dependency
 
- -- Laurent Bigonville <bigon@debian.org>  Wed, 14 Mar 2012 11:31:42 +0100
+ -- Laurent Bigonville <bigon@debian.org>  Wed, 14 Mar 2012 11:36:57 +0100
 
 vagrant (0.9.7-1) unstable; urgency=low
 
