--- a/templates/locales/en.yml
+++ b/templates/locales/en.yml
@@ -124,6 +124,10 @@ en:
         permissions on the following file to 0600 and then try running this command again:
 
         %{key_path}
+      ssh_key_type_not_supported: |-
+        The private key you're attempting to use with this Vagrant box uses
+        an unsupported encryption type. The SSH library Vagrant uses does not support
+        this key type. Please use `ssh-rsa` or `ssh-dss` instead.
       ssh_port_not_detected: |-
         Vagrant couldn't determine the SSH port for your VM! Vagrant attempts to
         automatically find a forwarded port that matches your `config.ssh.guest_port`
@@ -327,6 +331,11 @@ en:
           failed_to_boot: |-
             Failed to connect to VM via SSH. Please verify the VM successfully booted
             by looking at the VirtualBox GUI.
+          failed_to_run: |-
+            The VM failed to remain in the "running" state while attempting to boot.
+            This is normally caused by a misconfiguration or host system incompatibilities.
+            Please open the VirtualBox GUI and attempt to boot the virtual machine
+            manually to get a more informative error message.
         bridged_networking:
           available: |-
             Available bridged network interfaces:
