--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vagrant (1.0.2-2) UNRELEASED; urgency=low
+
+  * debian/vagrant.bash-completion: Add bash completion file
+
+ -- Laurent Bigonville <bigon@debian.org>  Tue, 10 Apr 2012 09:53:13 +0200
+
 vagrant (1.0.2-1) unstable; urgency=low
 
   * New upstream release
