--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vagrant (1.0.3-2) UNRELEASED; urgency=low
+
+  * debian/watch: Update watch file URL, vagrant is no longer distributed as a
+    gem (Closes: #711110)
+
+ -- Laurent Bigonville <bigon@debian.org>  Tue, 04 Jun 2013 22:04:26 +0200
+
 vagrant (1.0.3-1) unstable; urgency=low
 
   * New upstream release
