--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,9 @@ vagrant (1.0.3-2) UNRELEASED; urgency=low
   * debian/watch: Update watch file URL, vagrant is no longer distributed as a
     gem (Closes: #711110)
   * debian/control: Use canonical URL for VCS fields
+  * debian/control: Bump Standards-Version to 3.9.4 (no further changes)
 
- -- Laurent Bigonville <bigon@debian.org>  Tue, 04 Jun 2013 22:07:26 +0200
+ -- Laurent Bigonville <bigon@debian.org>  Tue, 04 Jun 2013 22:08:49 +0200
 
 vagrant (1.0.3-1) unstable; urgency=low
 
