--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,13 @@
-vagrant (1.0.3-2) UNRELEASED; urgency=low
+vagrant (1.2.2-1) UNRELEASED; urgency=low
 
+  * New upstream release (Closes: #697280)
+    - Add support for VirtualBox 4.2 (Closes: #710242)
   * debian/watch: Update watch file URL, vagrant is no longer distributed as a
     gem (Closes: #711110)
   * debian/control: Use canonical URL for VCS fields
   * debian/control: Bump Standards-Version to 3.9.4 (no further changes)
 
- -- Laurent Bigonville <bigon@debian.org>  Tue, 04 Jun 2013 22:08:49 +0200
+ -- Laurent Bigonville <bigon@debian.org>  Tue, 04 Jun 2013 22:12:43 +0200
 
 vagrant (1.0.3-1) unstable; urgency=low
 
