--- a/debian/changelog
+++ b/debian/changelog
@@ -3,12 +3,13 @@ vagrant (1.2.2-1) UNRELEASED; urgency=low
   * New upstream release (Closes: #697280)
     - Add support for VirtualBox 4.2 (Closes: #710242)
     - debian/control: Adjust dependencies
+    - debian/patches/01_source_root_path.patch: Refreshed
   * debian/watch: Update watch file URL, vagrant is no longer distributed as a
     gem (Closes: #711110)
   * debian/control: Use canonical URL for VCS fields
   * debian/control: Bump Standards-Version to 3.9.4 (no further changes)
 
- -- Laurent Bigonville <bigon@debian.org>  Tue, 04 Jun 2013 22:28:02 +0200
+ -- Laurent Bigonville <bigon@debian.org>  Tue, 04 Jun 2013 22:29:36 +0200
 
 vagrant (1.0.3-1) unstable; urgency=low
 
