--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,8 @@ vagrant (1.2.2-1) UNRELEASED; urgency=low
   * debian/control: Use canonical URL for VCS fields
   * debian/control: Bump Standards-Version to 3.9.4 (no further changes)
   * debian/vagrant.install: Install plugins directory
+  * debian/patches/02_disable_installer_warning.patch: Disable warning about
+    not using the installer
 
  -- Laurent Bigonville <bigon@debian.org>  Tue, 04 Jun 2013 22:29:36 +0200
 
