--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ vagrant (1.2.2-1) UNRELEASED; urgency=low
   * debian/watch: Update watch file URL, vagrant is no longer distributed as a
     gem (Closes: #711110)
   * debian/control: Use canonical URL for VCS fields
+  * debian/control: Add bsdtar, curl and openssh-client to the dependencies
   * debian/control: Bump Standards-Version to 3.9.4 (no further changes)
   * debian/vagrant.install: Install plugins directory
   * debian/patches/02_disable_installer_warning.patch: Disable warning about
