--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,7 @@ vagrant (1.2.2-1) UNRELEASED; urgency=low
   * debian/patches/02_disable_installer_warning.patch: Disable warning about
     not using the installer
   * debian/require-rubygems.overrides: Refresh file list
+  * debian/vagrant.bash-completion: Add completion for the new arguments
 
  -- Laurent Bigonville <bigon@debian.org>  Tue, 04 Jun 2013 22:29:36 +0200
 
