--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vagrant (1.2.4-1) UNRELEASED; urgency=low
+
+  * Non-maintainer upload.
+  * New upstream release
+
+ -- Marc Fournier <marc.fournier@camptocamp.com>  Thu, 25 Jul 2013 10:25:04 +0200
+
 vagrant (1.2.2-1) unstable; urgency=low
 
   * New upstream release (Closes: #697280)
