--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vagrant (1.3.4-1~c2c+1) squeeze wheezy precise quantal raring saucy; urgency=low
+
+  * Non-maintainer upload.
+  * New upstream release
+
+ -- Marc Fournier <marc.fournier@camptocamp.com>  Wed, 09 Oct 2013 16:32:29 +0200
+
 vagrant (1.2.4-1~c2c+1) squeeze wheezy precise quantal raring saucy; urgency=low
 
   * Non-maintainer upload.
